src/examples/errors/07_not_an_array.veri
// Error: Indexing non-array type
// Expected error: E007 - Type cannot be indexed

fn main() {
    let x: int = 5;
    let y: int = x[0];
}
